--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<li><a href="about.html">ABOUT</a></li>
 	<li><a href="products.html"> PRODUCTS </a></li>
 	<li><a href="kids.html">KIDS</a></li>
-	<li><a href="contacts.html">CONTACT </a></li></ul></nav></section>
+	<li><a href="contacts.html">CONTACTS </a></li></ul></nav></section>
 <body>
 	<div class="flexslider">
     <ul class="slides">
