--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
 	<li><a href="about.html">ABOUT</a></li>
 	<li><a href="products.html"> PRODUCTS </a></li>
 	<li><a href="kids.html" >KIDS</a></li>
-	<li class="active"><a> Contact </a></li></ul></nav></header>
+	<li class="active"><a> Contacts </a></li></ul></nav></header>
 	<body><h1><center>Contacts</center></h1>
 
 	
